extension/skin/classic/console.css
/* ... */
.profileTable td {
    padding: 1px 4px 0 4px;
}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
/* Profiler Heaer */

.headerCell {
    cursor: pointer;
    -moz-user-select: none;
    border-bottom: 1px solid #9C9C9C;
    padding: 0 !important;
    font-weight: bold;
    background: #C8C8C8 -moz-linear-gradient(top, rgba(255, 255, 255, 0.3), rgba(0, 0, 0, 0.2));
}

.headerCellBox {
    padding: 2px 13px 2px 4px;
    border-left: 1px solid #D9D9D9;
    border-right: 1px solid #9C9C9C;
    white-space: nowrap;
}

.headerCell:hover:active {
    background-color: #B4B4B4;
}

.headerSorted {
    background-color: #8CA0BE;
}

.headerSorted > .headerCellBox {
    border-right-color: #6B7C93;
    background: url(chrome://firebug/skin/arrowDown.png) no-repeat right;
}

.headerSorted.sortedAscending > .headerCellBox {
    background-image: url(chrome://firebug/skin/arrowUp.png);
}

.headerSorted:hover:active {
    background-color: #6E87AA;
}

.linkCell {
    text-align: right;
}

.linkCell > .objectLink-sourceLink {
    position: static;
}

.useA11y .profileTable *:focus {
    outline-offset: -2px;
}

/*************************************************************************************************/

.logRow-stackTrace {
    padding-top: 0;
    background: #F8F8F8;
}

.errorSourceBox {
    position: relative;
    padding-top: 2px;
}

/*************************************************************************************************/

.objectLink-regexp,
.objectLink-Storage,
.objectLink-StorageList,
.objectLink-object,
.objectLink-Date {
    font-family: Lucida Grande, sans-serif;
    font-weight: bold;
    color: DarkGreen;
    white-space: pre-wrap;
}

.objectPropValue {
    font-weight: normal;
    font-style: italic;
    color: #555555;
}

.storageTitle {
    font-weight: normal;
}

.objectLink-regexp > .regexpSource {
    padding-right: 4px;
    font-weight: normal;
    font-family: Monaco, monospace;
}


/************************************************************************************************/

.objectLink-NamedNodeMap .nodeName,
.objectLink-NamedNodeMap .objectEqual,
.objectLink-NamedNodeMap .arrayLeftBracket,
.objectLink-NamedNodeMap .arrayRightBracket,
.objectLink-Attr .attrEqual,
.objectLink-Attr .attrTitle {
    color: rgb(0, 0, 136)
}

/************************************************************************************************/

.selectorTag,
.selectorId,
.selectorClass {
    font-family: monospace;
    font-weight: normal;
}

.selectorTag {
    color: #0000FF;
}

.selectorId {
    color: DarkBlue;
}

.selectorClass {
    color: red;
}

.selectorHidden > .selectorTag {
    color: #5F82D9;
}

.selectorHidden > .selectorId {
    color: #888888;
}

.selectorHidden > .selectorClass {
    color: #D86060;
}

.selectorValue {
    font-family: Lucida Grande, sans-serif;
    font-style: italic;
    color: #555555;
}

/*****************************************************************************************/

.panelNode.searching .logRow,
.panelNode.searching .logRow-group > .objectLink {
    display: none;
}

.panelNode.hideType-error .logRow-error,
.panelNode.hideType-error .logRow-errorMessage,
.panelNode.hideType-warning .logRow-warn,
.panelNode.hideType-warning .logRow-warningMessage,
.panelNode.hideType-info .logRow-info,
.panelNode.hideType-debug .logRow-debug,
.panelNode.hideType-profile .logRow-profile,
.panelNode.hideType-table .logRow-table,
.panelNode.hideType-group .logRow-group,
.panelNode.hideType-command .logRow-command,
.panelNode.hideType-stackTrace .logRow-stackTrace,
.panelNode.hideType-log .logRow-log,
.panelNode.hideType-dir .logRow-dir,
.panelNode.hideType-assert .logRow-assert,
.panelNode.hideType-spy .logRow-spy {
    display: none !important;
}

.logRow.matched {
    display: block !important;
}

.logRow.matching {
    position: absolute;
    left: -1000px;
    top: -1000px;
    max-width: 0;
    max-height: 0;
    overflow: hidden;
}

/*****************************************************************************************/

.objectLeftBrace,
.objectRightBrace,
.objectEqual,
.objectComma,
.arrayLeftBracket,
.arrayRightBracket,
.arrayComma {
    font-family: monospace;
}

.objectLeftBrace,
.objectRightBrace,
.arrayLeftBracket,
.arrayRightBracket {
    font-weight: bold;
}

.objectLeftBrace,
.arrayLeftBracket {
    margin-right: 4px;
}

.objectRightBrace,
.arrayRightBracket {
    margin-left: 4px;
}

/*****************************************************************************************/

.logRow-dir {
    padding: 0;
}

/************************************************************************************************/

.logRow-errorMessage > .hasTwisty > .errorTitle,
.logRow-spy .spyHead .spyTitle,
.logGroup > .logRow {
    cursor: pointer;
    padding-left: 18px;
    background-repeat: no-repeat;
    background-position: 3px 3px;
}

.logRow-errorMessage > .hasTwisty > .errorTitle {
    background-position: 2px 3px;
}

.logRow-errorMessage > .hasTwisty > .errorTitle:hover,
.logRow-spy .spyHead .spyTitle:hover,
.logGroup > .logRow:hover {
    text-decoration: underline;
}

.logRow-errorMessage .errorTitle > .errorMessage {
    white-space: pre-wrap;
}

/*****************************************************************************************/

.logRow-log .objectBox-array.hasTwisty {
    padding-left: 18px;
}

.logRow-log .objectBox-array > .arrayProperties {
    padding-left: 18px;
}

/*****************************************************************************************/

.logRow-spy,
.logRow-spy .objectLink-sourceLink {
    background: #FFFFFF -moz-linear-gradient(top, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) 18px, transparent 51px) repeat-x;
    padding-right: 4px;
    right: 0;
}

/* padding-right should be zero for .logRow-spy, so declare after the previous selector */
.logRow-spy {
    padding: 0px 0 1px 0;
}

.logRow-spy.opened {
    padding-bottom: 4px;
    border-bottom: none;
}
/* ... */

